--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "lnvoice-generator",
+  "name": "invoice-generator",
   "version": "1.0.0",
   "type" : "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start" : "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Aleksander Kus",
   "license": "ISC",
-  "description": "",
+  "description": "Very Very basic invoice generator. Only in Polish",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
